<?xml version="1.0"?>
<package format="2">
  <name>bezier_examples</name>
  <version>0.0.2</version>
  <description>Application example of bezier with a Fanuc robot</description>
  <author>Francois Lasson, Kévin Bolloré, Papa Libasse Sow - Institut Maupertuis</author>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>bezier</depend>
  <depend>fanuc_m10ia_moveit_config_melodic</depend>
  <depend>fanuc_m10ia_support</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>rviz_visual_tools</depend>
  <depend>tf_conversions</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
</package>
